# rust-template-generate

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  changelog.toml  rustfmt.toml
